# mytools

./: .gitignore  README.md  pyproject.toml
src/mytools/: __init__.py  count.py  transform.py  trends.py
src/notebooks/: checks_trends.ipynb
